Working JWT Auth with Swagger
